<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center">

    <!-- EditText for Email -->
    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/email_content_description"
        android:padding="12dp"
        android:layout_marginTop="8dp" />

    <!-- Button to send reset password request -->
    <Button
        android:id="@+id/btnResetPassword"
        android:text="@string/reset_password_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/reset_password_request_desc"
        android:padding="16dp"/>

    <!-- Link to go back to Login screen -->
    <TextView
        android:id="@+id/tvBackToLogin"
        android:text="@string/back_to_login"
        android:textColor="#2196F3"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/back_to_login_desc" />

</LinearLayout>
