<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- EditText for Email -->

    <!-- EditText for Password -->
    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email_hint"
        android:importantForAccessibility="yes"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:padding="15dp"
        android:importantForAccessibility="yes"
        android:autofillHints="newPassword" />

    <!-- EditText for Confirm Password -->
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:padding="15dp"
        android:importantForAccessibility="yes"
        android:autofillHints="newPassword" />

    <!-- Button to create account -->
    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/create_account_button"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/create_account_button_desc" />

</LinearLayout>
